--- a/xmonad-config.cabal
+++ b/xmonad-config.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 executable xmonad
   main-is:             xmonad.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-missing-signatures -Werror
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:       base
                      , containers
                      , data-default
